@@ -37,6 +37,7 @@ The following bugs are resolved with this release:
   [24034] tst-cancel21-static fails with SIGBUS on pre-ARMv7 when using GCC 8
   [24097] Can't use 64-bit register for size_t in assembly codes for x32 (CVE-2019-6488)
   [24155] x32 memcmp can treat positive length as 0 (if sign bit in RDX is set) (CVE-2019-7309)
+  [24161] __run_fork_handlers self-deadlocks in malloc/tst-mallocfork2
 
 Security related changes:
 
